@@ -4,6 +4,7 @@ Joshua Cardenzana (jcardenzana@irap.omp.eu)
 Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr)
 Christoph Deil (Christoph.Deil@mpi-hd.mpg.de)
 Alex Donath (Axel.Donath@mpi-hd.mpg.de)
+Stefan Eschbach (stefan.eschbach@fau.de)
 Florent Forest (florent.forest@isae.fr)
 Lucie Gerard (lucie.gerard@desy.de)
 Tarek Hassan (thassan@ifae.es)
