@@ -1,8 +1,9 @@
-2017-03-27
+2017-04-07
 
         * Version 1.3.0 released
         =========================
 
+        Avoid hang-up of GCTAModelAeffBackground::mc() method (#1988)
         Enhance precision of GCTAEdisp2D::compute_ebounds_src
         Add conversion methods between GEbounds and GEnergies (#1977)
         Add GModelSpectralSmoothBrokenPlaw class (#1948)
